# PanopticText

./: README.md  __init__.py  main.py  pyproject.toml  requirements.txt
plugin/: __init__.py  main.py  utils.py
