[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "panoptic_text"
version = "0.1.0"
description = "A generic panoptic plugin"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "bertopic",
    "scikit-learn"
]
[project.urls]
Homepage = "https://github.com/Tyrannas/PanopticText"


[tool.hatch.build.targets.wheel]
packages = [
    "plugin"
]
ignore-vcs = true
